# SentinelFetal2-Production

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  just  justfile  problems.md  pyproject.toml  requirements.txt  setup
.cursor/: mcp.json
.github/: UV_MIGRATION_PACK.md  copilot-instructions.md
.github/agents/: uv-migration-architect.agent.md
.github/instructions/: dependency-classification.instructions.md  docker-uv-cpu-torch.instructions.md  uv-migration-orchestrator.instructions.md  uv-migration.instructions.md
.github/migration-notes/: blockers-and-user-input.md  execution-log.md  findings-and-decisions.md  probe-py313.txt  probe-py314.txt  runtime-names.txt  stage-status.md
api/: config.py  dependencies.py  logging_config.py  main.py
api/middleware/: __init__.py  (+1 more)
artifacts/: production_config.json  production_lr.pkl  production_scaler.pkl
config/: train_config.yaml
data/: alert_log.jsonl  ctu_uhb_clinical_full.csv  god_mode_catalog.json
docs/: AGENTS.md  ARCHITECTURE.md  PLAN.md  docker_guide.md  getting_started.md  god_mode_signal_plan.md  problems.md  system_summary_he.md
frontend/: Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
generator/: replay.py
scripts/: catalog_pathologies.py  detection_accuracy_test.py  download_weights.py  perf_test_16beds.py  validate_artifacts.py
ui/: app.py
weights/: fold0_best_finetune.pt  fold1_best_finetune.pt  fold2_best_finetune.pt  fold3_best_finetune.pt  fold4_best_finetune.pt
(+624 files in other folders)
